updating lynx config

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "rspeedy preview"
   },
   "dependencies": {
-    "@lynx-js/react": "^0.105.1"
+    "@lynx-js/react": "^0.105.1",
+    "zephyr-rspack-plugin": "^0.0.36"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
